--- a/resume/static/css/style.css
+++ b/resume/static/css/style.css
@@ -66,14 +66,14 @@ font-size: 24px;
     background-color: #f0f0f0;
 }
 
-.typing {
+.container .typing {
   color: #5161ce; /* ou #00FFFF */
   font-weight: 1600;
   letter-spacing: 3px;
   font-size: 2.5em;
 }
 
-.typing::after {
+.container .typing::after {
   content: "|";
   animation: blink 60s infinite;
   color: #5161ce;
