--- a/resume/templates/contact.html
+++ b/resume/templates/contact.html
@@ -23,8 +23,8 @@
 
     </div>
 
-    <div class="col-5 offset-1 mt-3 ">
-        <div class="container form-container">
+    <div class="col-5 offset-1 mt-3">
+        <div class="container form-container"  style="background: linear-gradient(135deg, #5161ce, #24307F, #ffffff);">
             <form>
             <div class="form-group m-3">
               <label for="exampleInputEmail1"> Name</label>
