--- a/resume/templates/base.html
+++ b/resume/templates/base.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
      <style>
         /* === Include all your CSS styles from your previous message === */
         body { font-family: 'Roboto', sans-serif; }
