--- a/resume/templates/navbar.html
+++ b/resume/templates/navbar.html
@@ -1,42 +1,42 @@
 {% load static %}
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-custom navbar-mainbg">
-    <!-- <a id="brand" class="navbar-brand navbar-logo" style="padding-right:240px;" href="{% url 'home' %}">
-        <img src="{% static 'images/image.svg' %}" width="100" height="50" alt="">
-    </a>
-  -->
+<nav class="navbar navbar-expand-lg navbar-mainbg">
     <a class="navbar-brand navbar-logo" href="#"><img src="{% static 'images/image.svg' %}" width="88" height="42" alt=""></a>
+
+    <!-- Toggle button for mobile -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fas fa-bars" style="color:#fff; font-size:28px;"></i></span>
+    </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- CORRECT placement of .hori-selector -->
-        
-
         <ul class="navbar-nav ml-auto">
-          <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
-          <li class="nav-item">
-              <a class="nav-link active" href="/"><i class="fas fa-home"></i>Home</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'about' %}"><i class="fas fa-user"></i>About</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'degree' %}"><i class="fas fa-graduation-cap"></i>Degrees</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'experience' %}"><i class="fas fa-briefcase"></i>Experiences</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'projects' %}"><i class="fas fa-project-diagram"></i>Projects</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'certificate' %}"><i class="fas fa-certificate"></i>Certificates</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact' %}"><i class="fas fa-envelope"></i>Contact</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'resume' %}"><i class="fas fa-file-alt"></i>Resume</a>
-          </li>
-      </ul>
-
+            <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+            <li class="nav-item">
+                <a class="nav-link active" href="/"><i class="fas fa-home"></i>Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}"><i class="fas fa-user"></i>About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'degree' %}"><i class="fas fa-graduation-cap"></i>Degrees</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'experience' %}"><i class="fas fa-briefcase"></i>Experiences</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'projects' %}"><i class="fas fa-project-diagram"></i>Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'certificate' %}"><i class="fas fa-certificate"></i>Certificates</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'contact' %}"><i class="fas fa-envelope"></i>Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'resume' %}"><i class="fas fa-file-alt"></i>Resume</a>
+            </li>
+        </ul>
     </div>
 </nav>
